<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="6"
    android:layout_margin="5dp"
    android:background="#2D2932">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:gravity="center|end"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/color_grey"
        android:layout_margin="5dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_margin="4dp">

        <Button
            android:id="@+id/clear"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/clear_all"
            android:textSize="25sp"
            android:onClick="buttonClick"
            android:background="@color/color_red" />



        <Button
            android:id="@+id/back"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/clear_one"
            android:textSize="25sp"
            android:onClick="buttonClick"
            android:background="@color/color_red"/>

        <Button
            android:id="@+id/power"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/power"
            android:textSize="25sp"
            android:onClick="buttonClick"
            android:background="@color/color_orange"/>

        <Button
            android:id="@+id/divide"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/Division"
            android:textSize="25sp"
            android:onClick="buttonClick"
            android:background="@color/color_orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_margin="4dp">

        <Button
            android:onClick="buttonClick"
            android:id="@+id/seven"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/seven"
            android:textSize="25sp" />

        <Button
            android:onClick="buttonClick"
            android:id="@+id/eight"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/eight"
            android:textSize="25sp" />

        <Button
            android:onClick="buttonClick"
            android:id="@+id/nine"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/nine"
            android:textSize="25sp" />

        <Button
            android:onClick="buttonClick"
            android:id="@+id/multiply"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/multiplication"
            android:textSize="25sp"
            android:background="@color/color_orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_margin="4dp">

        <Button
            android:onClick="buttonClick"
            android:id="@+id/four"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/four"
            android:textSize="25sp" />

        <Button
            android:onClick="buttonClick"
            android:id="@+id/five"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/five"
            android:textSize="25sp" />

        <Button
            android:onClick="buttonClick"
            android:id="@+id/six"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/six"
            android:textSize="25sp" />

        <Button
            android:onClick="buttonClick"
            android:id="@+id/addition"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/addition"
            android:textSize="25sp"
            android:background="@color/color_orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_margin="4dp">

        <Button
            android:onClick="buttonClick"
            android:id="@+id/one"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/one"
            android:textSize="25sp" />

        <Button
            android:onClick="buttonClick"
            android:id="@+id/two"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/two"
            android:textSize="25sp" />

        <Button
            android:onClick="buttonClick"
            android:id="@+id/three"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/three"
            android:textSize="25sp" />

        <Button
            android:onClick="buttonClick"
            android:id="@+id/subtract"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/subtract"
            android:textSize="25sp"
            android:background="@color/color_orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:layout_margin="4dp">

        <Button
            android:onClick="buttonClick"
            android:id="@+id/zero"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/zero"
            android:textSize="25sp" />

        <Button
            android:onClick="buttonClick"
            android:id="@+id/dot"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/dot"
            android:textSize="25sp" />


        <Button
            android:onClick="buttonClick"
            android:id="@+id/equals"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/equals"
            android:textSize="25sp"
            android:background="#FF9800"/>

    </LinearLayout>





</LinearLayout>
</layout>